Fix broken layout

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -18,3 +18,6 @@ label {
     color: red
 }
 
+.container {
+    padding: 40px 25px 0;
+}
